Ajeitando os links

--- a/html/index.html
+++ b/html/index.html
@@ -1035,8 +1035,8 @@
                                     <figcaption>
                                         <p></p>
                                         <ul>
-                                            <li><a href=""><i class="https://github.com/simoesusp"></i></a></li>
-                                            <li><a href=""><i class="https://www.linkedin.com/in/eduardo-simoes-8aa04918"></i></a></li>
+                                            <li><a href="https://github.com/simoesusp"><i class="fa fa-github fa-2x"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/eduardo-simoes-8aa04918"><i class="fa fa-linkedin fa-2x"></i></a></li>
                                         </ul>
                                     </figcaption>
                                 </figure>
@@ -1052,8 +1052,8 @@
                                     <figcaption>
                                         <p></p>
                                         <ul>
-                                            <li><a href=""><i class="https://github.com/bileki"></i></a></li>
-                                            <li><a href=""><i class="https://br.linkedin.com/in/guilherme-augusto-bileki-67a66641"></i></a></li>
+                                            <li><a href="https://github.com/bileki"><i class="fa fa-github fa-2x"></i></a></li>
+                                            <li><a href="https://br.linkedin.com/in/guilherme-augusto-bileki-67a66641"><i class="fa fa-linkedin fa-2x"></i></a></li>
                                         </ul>
                                     </figcaption>
                                 </figure>
@@ -1103,7 +1103,7 @@
                                     <figcaption>
                                         <p></p>
                                         <ul>
-                                            <li><a href=""><i class="https://github.com/lekonjak"></i></a></li>
+                                            <li><a href="https://github.com/lekonjak"><i class="fa fa-github fa-2x"></i></a></li>
                                             <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
                                         </ul>
                                     </figcaption>
