--- a/html/calendario.html
+++ b/html/calendario.html
@@ -45,47 +45,49 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <script>
-        document.createElement('video');
-      </script>
-    <![endif]-->
-
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <script>
+    document.createElement('video');
+</script>
+<![endif]-->
 
-      document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
+<script>
 
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-          locale: 'pt-br',
-          plugins: [ 'interaction', 'dayGrid' ],
-          defaultView: 'dayGridMonth', /*dayGridWeek*/
-          selectable: true,
-          events: [
+document.addEventListener('DOMContentLoaded', function() {
+    var calendarEl = document.getElementById('calendar');
+
+    var calendar = new FullCalendar.Calendar(calendarEl, {
+        locale: 'pt-br',
+        plugins: [ 'interaction', 'dayGrid' ],
+        defaultView: 'dayGridMonth', /*dayGridWeek*/
+        selectable: true,
+        events: [
             {
-              title: 'Aula: Água Vermelha',
-              startRecur: '2019-08-01',
-              endRecur: '2019-12-07',
-              daysOfWeek: [4]
+                title: 'Aula: Água Vermelha',
+                startRecur: '2019-08-01',
+                endRecur: '2019-12-07',
+                daysOfWeek: [4]
             },
             {
-              title: 'Aula: Álvaro Guião',
-              startRecur: '2019-08-01',
-              endRecur: '2019-12-07',
-              daysOfWeek: [3,5]
+                title: 'Aula: Álvaro Guião',
+                startRecur: '2019-08-01',
+                endRecur: '2019-12-07',
+                daysOfWeek: [3,5]
             }
-          ],
-          dateClick: function(info) {
-            alert('Date: ' + info.dateStr);
-            alert('Resource ID: ' + info.resource.id);
-            }   
-        });
+        ],
+        eventClick: function(info) {
+            document.getElementById('showPopUp').click();
+           /*alert('Event: ' + info.event.title);
+           alert('Coordinates: ' + info.jsEvent.pageX + ',' + info.jsEvent.pageY);
+           alert('View: ' + info.view.type);*/
+        }
+    });
 
-        calendar.render();
-      });
+    calendar.render();
+});
 
-    </script>
+</script>
 
 </head>
 
@@ -123,7 +125,6 @@
         </div><!-- /.container -->
     </nav>
 
-
     <!-- Calendar section -->
     <section class="content-section no-bottom-pad">
         <div class="container">
@@ -138,29 +139,45 @@
         <div class="container">
             <div class="row form-container">
                 <div class="col-md-12 ">
-                  <div id='calendar'></div>
+                    <div id='calendar'></div>
                 </div><!-- /.contact-form -->
             </div><!-- /.row -->
         </div><!-- /.container -->
+    </section>
 
+    <!-- PopUp -->
+    <a href="#calendarPopUp" id="showPopUp"></a>
+    <div id="calendarPopUp">
+        <div>
+            <a href="#close">Fechar</a><br>
+            <center><h1>Aula em Água Vermelha</h1></center>
 
-            <!-- Footer -->
-            <footer>
-                <div class="container">
-                    <div class="row text-center">
-                        <div class="col-md-12 segment">
-                            <a href="#" title="Principia">
-                                <h2>
-                                    <div class="client-info">
-                                        <!-- replace with your brand logo/text -->
-                                        <img src="assets/images/principia-logo.png" alt="Principia" title="Principia" class="img-responsive">
-                                    </div>
-                                </h2>
-                            </a>
-                            <p class="white">Por uma educação de qualidade.</p>
-                        </div><!-- /.col-md-12 -->
-                    </div><!-- /.row -->
-
+            <p>
+                Nesta aula iremos falar sobre ....
+                <br><br>
+                Você gostaria de participar desta aula com a gente? Adorariamos sua presença!
+                Se tiver interesse preencha os campos abaixo:
+                <br><br>
+                <form action="/database/sendVolunteerForms.php" method="POST">
+                <div>
+                    <label for="name">Nome Completo:</label>
+                    <input type="text" id="name" required/>
+                </div>
+                <div>
+                    <label for="mail">E-mail:</label>
+                    <input type="email" id="mail" required/>
+                </div>
+                <div>
+                    <label for="phone">Celular:</label>
+                    <input type="text" id="phone" required/>
+                </div>
+                <div class="button">
+                    <button type="submit">Enviar sua mensagem</button>
+                </div>
+            </form>
+            </p>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer>
@@ -212,13 +229,13 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.timelinr-0.9.6.js"></script>
     <script>
-        $(function(){
-            $().timelinr({
-                orientation:    'vertical',
-                issuesSpeed:    300,
-                datesSpeed:     100
-            })
-        });
+    $(function(){
+        $().timelinr({
+            orientation:    'vertical',
+            issuesSpeed:    300,
+            datesSpeed:     100
+        })
+    });
     </script>
 
     <!-- Bootstrap Core JavaScript -->
